[package]
name = "generic-clap-host"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clack-extensions = { git = "https://github.com/prokopyl/clack.git", features = [
    "clack-host",
    "gui",
] }
clack-host = { git = "https://github.com/prokopyl/clack.git" }
etcetera = "0.8.0"
walkdir = "2.5.0"
winit = "0.30.5"

[lints.rust]
let-underscore = "warn"
rust-2018-idioms = "warn"
rust-2024-compatibility = "warn"
unused_crate_dependencies = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"

nursery = { level = "warn", priority = -1 }

# Restriction, MachineApplicable
allow_attributes = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
dbg_macro = "warn"
get_unwrap = "warn"
lossy_float_literal = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
semicolon_inside_block = "warn"
separated_literal_suffix = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
try_err = "warn"
